# AdventOfCode

./: .gitignore  adventOfCode.cabal  aoc2021.cabal  cabal.project  cabal.project.local
2015/: Main.hs
2015/Day01/: NotQuiteLisp.hs
2015/Day02/: IWasToldThereWouldBeNoMath.hs
2015/Day03/: PerfectlySphericalHousesinaVacuum.hs
2015/Day04/: TheIdealStockingStuffer.hs
2015/Day05/: DoesntHeHaveInternElvesForThis.hs
2016/: Main.hs
2020/: Main.hs
2020/Day01/: ReportRepair.hs  aoc2020-01.stats
2020/Day02/: PasswordPhilosophy.hs  aoc2020-02.stats
2020/Day03/: TobogganTrajectory.hs  aoc2020-03.stats
2020/Day04/: PassportProcessing.hs  aoc2020-04.stats
2020/Day05/: BinaryBoarding.hs  aoc2020-05.stats
2020/Day06/: CustomCustoms.hs  aoc2020-06.stats
2020/Day07/: HandyHaversacks.hs  aoc2020-07.stats
2021/: Main.hs
2021/Day01/: SonarSweep.hs  aoc2021-01.prof  aoc2021-01.stats
2021/Day02/: Dive.hs  aoc2021-02.prof  aoc2021-02.stats
2021/Day03/: BinaryDiagnostic.hs  aoc2021-03.prof  aoc2021-03.stats
2021/Day04/: Bingo.hs  aoc2021-04.prof  aoc2021-04.stats
2021/Day05/: HydrothermalVenture.hs  aoc2021-05.prof  aoc2021-05.stats
2021/Day06/: Lanternfish.hs  aoc2021-06.prof  aoc2021-06.stats
2021/Day07/: TheTreacherOfWhales.hs  aoc2021-07.prof  aoc2021-07.stats
2021/Day08/: SevenSegmentSearch.hs  aoc2021-08.prof  aoc2021-08.stats
2021/Day09/: SmokeBasin.hs  aoc2021-09.prof  aoc2021-09.stats
2021/Day10/: SyntaxScoring.hs  aoc2021-10.prof  aoc2021-10.stats
2021/Day11/: DumboOctopus.hs  aoc2021-11.prof  aoc2021-11.stats
2021/Day12/: PassagePathing.hs  aoc2021-12.prof  aoc2021-12.stats
2021/Day13/: TransparentOrigami.hs  aoc2021-13.prof  aoc2021-13.stats
2021/Day14/: ExtendedPolymerization.hs  aoc2021-14.prof  aoc2021-14.stats
2021/Day15/: Chiton.hs  aoc2021-15.stats
2021/Day16/: PacketDecoder.hs  aoc2021-16.prof  aoc2021-16.stats
2021/Day17/: TrickShot.hs  aoc2021-17.prof  aoc2021-17.stats
2021/Day18/: Snailfish.hs  aoc2021-18.prof  aoc2021-18.stats
2021/Day19/: BeaconScanner.hs  aoc2021-19.prof  aoc2021-19.stats
2021/Day20/: TrenchMap.hs
2021/Day21/: DiracDice.hs  aoc2021-21.prof  aoc2021-21.stats
2021/Day22/: ReactorReboot.hs  aoc2021-22.prof  aoc2021-22.stats
2021/Day23/: Amphipod.hs  aoc2021-23.prof  aoc2021-23.stats
2021/Day24/: ArithmeticLogicUnit.hs  aoc2021-24.prof  aoc2021-24.stats
2021/Day25/: SeaCucumber.hs  aoc2021-25.prof  aoc2021-25.stats
2021/data/: day22-test2.txt
2022/: Main.hs
2022/Day01/: CalorieCounting.hs  aoc2022-01.prof  aoc2022-01.stats
2022/Day02/: RockPaperScissors.hs  aoc2022-02.prof  aoc2022-02.stats
2022/Day03/: RucksackReorganization.hs  aoc2022-03.prof  aoc2022-03.stats
2022/Day04/: CampCleanup.hs  aoc2022-04.prof  aoc2022-04.stats
2022/Day05/: SupplyStacks.hs  aoc2022-05.prof  aoc2022-05.stats
2022/Day06/: TuningTrouble.hs  aoc2022-06.prof  aoc2022-06.stats
2022/Day07/: NoSpaceLeftOnDevice.hs  aoc2022-07.prof  aoc2022-07.stats
2022/Day08/: TreetopTreeHouse.hs  aoc2022-08.prof  aoc2022-08.stats
2022/Day09/: RopeBridge.hs  aoc2022-09.prof  aoc2022-09.stats
2022/Day10/: CathodeRayTube.hs  aoc2022-10.prof  aoc2022-10.stats
2022/Day11/: MonkeyintheMiddle.hs  aoc2022-11.prof  aoc2022-11.stats
2022/Day12/: HillClimbingAlgorithm.hs  aoc2022-12.prof  aoc2022-12.stats
2022/Day13/: DistressSignal.hs  aoc2022-13.prof  aoc2022-13.stats
2022/Day14/: RegolithReservoir.hs  aoc2022-14.prof  aoc2022-14.stats
2022/Day15/: BeaconExclusionZone.hs  aoc2022-15.prof  aoc2022-15.stats
2022/Day16/: ProboscideaVolcanium.hs  aoc2022-16.prof  aoc2022-16.stats  day16.dot
2022/Day17/: PyroclasticFlow.hs  aoc2022-17.prof  aoc2022-17.stats
2022/Day18/: BoilingBoulders.hs  aoc2022-18.prof  aoc2022-18.stats
2022/Day19/: NotEnoughMinerals.hs  aoc2022-19.prof  aoc2022-19.stats
2022/Day20/: GrovePositioningSystem.hs  aoc2022-20.prof  aoc2022-20.stats
2022/Day21/: MonkeyMath.hs  aoc2022-21.prof  aoc2022-21.stats
2022/Day22/: MonkeyMap.hs  aoc2022-22.prof  aoc2022-22.stats
2022/Day23/: UnstableDiffusion.hs  aoc2022-23.prof  aoc2022-23.stats
2022/Day24/: BlizzardBasin.hs  aoc2022-24.prof  aoc2022-24.stats
2022/Day25/: FullofHotAir.hs  aoc2022-25.prof  aoc2022-25.stats
2022/data/: day16-simplified.dot
2023/: Main.hs
2023/Day01/: Trebuchet.hs  aoc2023-01.prof  aoc2023-01.stats
2023/Day02/: CubeConundrum.hs  aoc2023-02.prof  aoc2023-02.stats
2023/Day03/: GearRatios.hs  aoc2023-03.prof  aoc2023-03.stats  day03-test.txt
2023/Day04/: Scratchcards.hs  aoc2023-04.prof  aoc2023-04.stats
2023/Day05/: IfYouGiveASeedAFertilizer.hs  aoc2023-05.prof  aoc2023-05.stats
2023/Day06/: WaitForIt.hs  aoc2023-06.prof  aoc2023-06.stats
2023/Day07/: CamelCards.hs  aoc2023-07.prof  aoc2023-07.stats
2023/Day08/: HauntedWasteland.hs  aoc2023-08.prof  aoc2023-08.stats
2023/Day09/: MirageMaintenance.hs  aoc2023-09.prof  aoc2023-09.stats
2023/Day10/: PipeMaze.hs  aoc2023-10.prof  aoc2023-10.stats
2023/Day11/: CosmicExpansion.hs  aoc2023-11.prof  aoc2023-11.stats
2023/Day12/: HotSprings.hs  aoc2023-12.prof  aoc2023-12.stats
2023/Day13/: PointofIncidence.hs  aoc2023-13.prof  aoc2023-13.stats
2023/Day14/: ParabolicReflectorDish.hs  aoc2023-14.prof  aoc2023-14.stats
2023/Day15/: LensLibrary.hs  aoc2023-15.prof  aoc2023-15.stats
2023/Day16/: TheFloorWillBeLava.hs  aoc2023-16.prof  aoc2023-16.stats
2023/Day17/: ClumsyCrucible.hs  aoc2023-17.prof  aoc2023-17.stats
2023/Day18/: LavaductLagoon.hs  aoc2023-18.prof  aoc2023-18.stats
2023/Day19/: Aplenty.hs  aoc2023-19.prof  aoc2023-19.stats
2023/Day20/: PulsePropagation.hs  aoc2023-20.prof  aoc2023-20.stats  day20.dot
2023/Day21/: StepCounter.hs  aoc2023-21.prof  aoc2023-21.stats
2023/Day22/: SandSlabs.hs  aoc2023-22.prof  aoc2023-22.stats
2023/Day23/: ALongWalk.hs  aoc2023-23.prof  (+1 more)
Algorithms/: CycleDetect.hs  FloydCycleDetect.hs  FloydWarshall.hs  Mincut.hs
script/: add_day.sh  flamegraph.sh  profile.sh  update_graphs.py  update_graphs.sh
stats/: Brewfile  Brewfile.lock.json  index.html  index.js  stats.html  stats.js
(+17 files in other folders)
