cabal-version:      2.4
name:               adventOfCode
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: My Advent of Code solutions in Haskell.

-- A longer description of the package.
description:
  These are my solutions for Advent of Code in pure Haskell.
  I don't aim to write any production code here. What I do aim
  for is performance and conciseness without writing any code
  that is too obfuscated.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Erik de Jong
maintainer:         ecco256@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2015
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        , Day01.NotQuiteLisp
        , Day02.IWasToldThereWouldBeNoMath
        , Day03.PerfectlySphericalHousesinaVacuum
        , Day04.TheIdealStockingStuffer
        , Day05.DoesntHeHaveInternElvesForThis
        -- !!aoc2015 module hook!! --
    build-depends:
          base >=4.7 && <5
        , bytestring
        , containers
        -- , cryptohash-md5
        , parsec
        , pureMD5
        , split
    hs-source-dirs:   2015
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable aoc2016
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        -- !!aoc2016 module hook!! --
    build-depends:
          base >=4.7 && <5
        , containers
        , parsec
        , split
    hs-source-dirs:   2016
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable aoc2017
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        -- !!aoc2017 module hook!! --
    build-depends:
          base >=4.7 && <5
        , containers
        , parsec
        , split
    hs-source-dirs:   2017
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable aoc2018
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        -- !!aoc2018 module hook!! --
    build-depends:
          base >=4.7 && <5
        , containers
        , parsec
        , split
    hs-source-dirs:   2018
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable aoc2019
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        -- !!aoc2019 module hook!! --
    build-depends:
          base >=4.7 && <5
        , containers
        , parsec
        , split
    hs-source-dirs:   2019
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable aoc2020
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        , Day01.ReportRepair
        , Day02.PasswordPhilosophy
        , Day03.TobogganTrajectory
        , Day04.PassportProcessing
        , Day05.BinaryBoarding
        , Day06.CustomCustoms
        , Day07.HandyHaversacks
        -- !!aoc2020 module hook!! --
    build-depends:
          base >=4.7 && <5
        , containers
        , parsec
        , split
    hs-source-dirs:   2020
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable aoc2021
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        , Day01.SonarSweep
        , Day02.Dive
        , Day03.BinaryDiagnostic
        , Day04.Bingo
        , Day05.HydrothermalVenture
        , Day06.Lanternfish
        , Day07.TheTreacherOfWhales
        , Day08.SevenSegmentSearch
        , Day09.SmokeBasin
        , Day10.SyntaxScoring
        , Day11.DumboOctopus
        , Day12.PassagePathing
        , Day13.TransparentOrigami
        , Day14.ExtendedPolymerization
        , Day15.Chiton
        , Day16.PacketDecoder
        , Day17.TrickShot
        , Day18.Snailfish
        , Day19.BeaconScanner
        , Day20.TrenchMap
        , Day21.DiracDice
        , Day22.ReactorReboot
        , Day23.Amphipod
        , Day24.ArithmeticLogicUnit
        -- !!aoc2021 module hook!! --
    build-depends:
          array
        , base >=4.7 && <5
        , containers
        , hashable
        , heap
        , hmatrix
        , MemoTrie
        , mtl
        , parsec
        , psqueues
        , QuickCheck
        , repa
        , split
    hs-source-dirs:   2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    -- ghc-options:      -O2 -threaded -prof -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
    default-language: Haskell2010

executable aoc2022
    main-is:          Main.hs
    other-modules:
          Paths_adventOfCode
        , Day01.CalorieCounting
        , Day02.RockPaperScissors
        , Day03.RucksackReorganization
        , Day04.CampCleanup
        , Day05.SupplyStacks
        , Day06.TuningTrouble
        , Day07.NoSpaceLeftOnDevice
        , Day08.TreetopTreeHouse
        , Day09.RopeBridge
        , Day10.CathodeRayTube
        , Day11.MonkeyintheMiddle
        , Day12.HillClimbingAlgorithm
        , Day13.DistressSignal
        , Day14.RegolithReservoir
        , Day15.BeaconExclusionZone
        -- !!aoc2022 module hook!! --
    build-depends:
          base >=4.7 && <5
        , array
        , containers
        , lens
        , mtl
        , parsec
        , split
    hs-source-dirs:   2022
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
