cabal-version:      2.4
name:               adventOfCode
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: My Advent of Code solutions in Haskell.

-- A longer description of the package.
description:
  These are my solutions for Advent of Code in Haskell.
  I don't aim to write any production code here, just to have some fun.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Erik de Jong
maintainer:         ecco256@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common defaults
  build-depends:    base >=4.17 && <5
  other-modules:    Paths_adventOfCode
  ghc-options:
        -Wall
        -threaded
        -j4
        -rtsopts
        -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions:
          LambdaCase
        , PartialTypeSignatures
        , ScopedTypeVariables
        , TupleSections
        , TypeApplications

test-suite algos-test
    -- import:           defaults
    type:             exitcode-stdio-1.0
    -- Directories containing source files.
    hs-source-dirs:   Algorithms/test
    main-is:          AlgorithmsTest.hs
    build-depends:
        algos,
        falsify,
        tasty,
        tasty-hunit
    
    build-depends:    base >=4.17 && <5

library algos
  import:           defaults
  exposed-modules:  CycleDetect, ShortestPath, Mincut
  build-depends:    array, fgl, random
  hs-source-dirs:   Algorithms/src

-- executable aoc2015
--     main-is:          Main.hs
--     other-modules:
--           Paths_adventOfCode
--         , Day01.NotQuiteLisp
--         , Day02.IWasToldThereWouldBeNoMath
--         , Day03.PerfectlySphericalHousesinaVacuum
--         , Day04.TheIdealStockingStuffer
--         , Day05.DoesntHeHaveInternElvesForThis
--         -- !!aoc2015 module hook!! --
--     build-depends:
--           base >=4.17 && <5
--         , bytestring
--         , containers
--         -- , cryptohash-md5
--         , parsec
--         , pureMD5
--         , split
--     hs-source-dirs:   2015
--     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
--     default-language: Haskell2010

-- executable aoc2020
--     main-is:          Main.hs
--     other-modules:
--           Paths_adventOfCode
--         , Day01.ReportRepair
--         , Day02.PasswordPhilosophy
--         , Day03.TobogganTrajectory
--         , Day04.PassportProcessing
--         , Day05.BinaryBoarding
--         , Day06.CustomCustoms
--         , Day07.HandyHaversacks
--         -- !!aoc2020 module hook!! --
--     build-depends:
--           base >=4.17 && <5
--         , containers
--         , parsec
--         , split
--     hs-source-dirs:   2020
--     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
--     default-language: Haskell2010

-- executable aoc2021
--     main-is:          Main.hs
--     other-modules:
--           Paths_adventOfCode
--         , Day01.SonarSweep
--         , Day02.Dive
--         , Day03.BinaryDiagnostic
--         , Day04.Bingo
--         , Day05.HydrothermalVenture
--         , Day06.Lanternfish
--         , Day07.TheTreacherOfWhales
--         , Day08.SevenSegmentSearch
--         , Day09.SmokeBasin
--         , Day10.SyntaxScoring
--         , Day11.DumboOctopus
--         , Day12.PassagePathing
--         , Day13.TransparentOrigami
--         , Day14.ExtendedPolymerization
--         , Day15.Chiton
--         , Day16.PacketDecoder
--         , Day17.TrickShot
--         , Day18.Snailfish
--         , Day19.BeaconScanner
--         , Day20.TrenchMap
--         , Day21.DiracDice
--         , Day22.ReactorReboot
--         , Day23.Amphipod
--         , Day24.ArithmeticLogicUnit
--         -- !!aoc2021 module hook!! --
--     build-depends:
--           array
--         , base >=4.17 && <5
--         , containers
--         , hashable
--         , heap
--         , hmatrix
--         , MemoTrie
--         , mtl
--         , parsec
--         , psqueues
--         , QuickCheck
--         , repa
--         , split
--     hs-source-dirs:   2021
--     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
--     default-language: Haskell2010


executable aoc2022-01
    import:           defaults
    main-is:          CalorieCounting.hs
    hs-source-dirs:   2022/Day01
    build-depends:    

executable aoc2022-02
    import:           defaults
    main-is:          RockPaperScissors.hs
    hs-source-dirs:   2022/Day02
    build-depends:    

executable aoc2022-03
    import:           defaults
    main-is:          RucksackReorganization.hs
    hs-source-dirs:   2022/Day03
    build-depends:    

executable aoc2022-04
    import:           defaults
    main-is:          CampCleanup.hs
    hs-source-dirs:   2022/Day04
    build-depends:    

executable aoc2022-05
    import:           defaults
    main-is:          SupplyStacks.hs
    hs-source-dirs:   2022/Day05
    build-depends:    

executable aoc2022-06
    import:           defaults
    main-is:          TuningTrouble.hs
    hs-source-dirs:   2022/Day06
    build-depends:    

executable aoc2022-07
    import:           defaults
    main-is:          NoSpaceLeftOnDevice.hs
    hs-source-dirs:   2022/Day07
    build-depends:    

executable aoc2022-08
    import:           defaults
    main-is:          TreetopTreeHouse.hs
    hs-source-dirs:   2022/Day08
    build-depends:    

executable aoc2022-09
    import:           defaults
    main-is:          RopeBridge.hs
    hs-source-dirs:   2022/Day09
    build-depends:    

executable aoc2022-10
    import:           defaults
    main-is:          CathodeRayTube.hs
    hs-source-dirs:   2022/Day10
    build-depends:    

executable aoc2022-11
    import:           defaults
    main-is:          MonkeyintheMiddle.hs
    hs-source-dirs:   2022/Day11
    build-depends:    

executable aoc2022-12
    import:           defaults
    main-is:          HillClimbingAlgorithm.hs
    hs-source-dirs:   2022/Day12
    build-depends:    

executable aoc2022-13
    import:           defaults
    main-is:          DistressSignal.hs
    hs-source-dirs:   2022/Day13
    build-depends:    

executable aoc2022-14
    import:           defaults
    main-is:          RegolithReservoir.hs
    hs-source-dirs:   2022/Day14
    build-depends:    

executable aoc2022-15
    import:           defaults
    main-is:          BeaconExclusionZone.hs
    hs-source-dirs:   2022/Day15
    build-depends:    

executable aoc2022-16
    import:           defaults
    main-is:          ProboscideaVolcanium.hs
    hs-source-dirs:   2022/Day16
    build-depends:    

executable aoc2022-17
    import:           defaults
    main-is:          PyroclasticFlow.hs
    hs-source-dirs:   2022/Day17

executable aoc2022-18
    import:           defaults
    main-is:          BoilingBoulders.hs
    hs-source-dirs:   2022/Day18

executable aoc2022-19
    import:           defaults
    main-is:          NotEnoughMinerals.hs
    hs-source-dirs:   2022/Day19
    build-depends:    lens, linear

executable aoc2022-20
    import:           defaults
    main-is:          GrovePositioningSystem.hs
    hs-source-dirs:   2022/Day20
    build-depends:    containers

executable aoc2023-01
    import:           defaults
    main-is:          Trebuchet.hs
    hs-source-dirs:   2023/Day01
    build-depends:    parsec

executable aoc2023-02
    import:           defaults
    main-is:          CubeConundrum.hs
    hs-source-dirs:   2023/Day02
    build-depends:    parsec

executable aoc2023-03
    import:           defaults
    main-is:          GearRatios.hs
    hs-source-dirs:   2023/Day03

executable aoc2023-04
    import:           defaults
    main-is:          Scratchcards.hs
    hs-source-dirs:   2023/Day04
    build-depends:    text

executable aoc2023-05
    import:           defaults
    main-is:          IfYouGiveASeedAFertilizer.hs
    hs-source-dirs:   2023/Day05
    build-depends:    parsec, range, split

executable aoc2023-06
    import:           defaults
    main-is:          WaitForIt.hs
    hs-source-dirs:   2023/Day06

executable aoc2023-07
    import:           defaults
    main-is:          CamelCards.hs
    hs-source-dirs:   2023/Day07
    build-depends:    containers

executable aoc2023-08
    import:           defaults
    main-is:          HauntedWasteland.hs
    hs-source-dirs:   2023/Day08
    build-depends:    containers

executable aoc2023-09
    import:           defaults
    main-is:          MirageMaintenance.hs
    hs-source-dirs:   2023/Day09

executable aoc2023-10
    import:           defaults
    main-is:          PipeMaze.hs
    hs-source-dirs:   2023/Day10

executable aoc2023-11
    import:           defaults
    main-is:          CosmicExpansion.hs
    hs-source-dirs:   2023/Day11

executable aoc2023-12
    import:           defaults
    main-is:          HotSprings.hs
    hs-source-dirs:   2023/Day12
    build-depends:    memoize, split

executable aoc2023-13
    import:           defaults
    main-is:          PointofIncidence.hs
    hs-source-dirs:   2023/Day13
    build-depends:    split

executable aoc2023-14
    import:           defaults
    main-is:          ParabolicReflectorDish.hs
    hs-source-dirs:   2023/Day14
    build-depends:    algos

executable aoc2023-15
    import:           defaults
    main-is:          LensLibrary.hs
    hs-source-dirs:   2023/Day15
    build-depends:    containers, split

executable aoc2023-16
    import:           defaults
    main-is:          TheFloorWillBeLava.hs
    hs-source-dirs:   2023/Day16
    build-depends:    containers, split

executable aoc2023-17
    import:           defaults
    main-is:          ClumsyCrucible.hs
    hs-source-dirs:   2023/Day17
    build-depends:    containers, fgl

executable aoc2023-18
    import:           defaults
    main-is:          LavaductLagoon.hs
    hs-source-dirs:   2023/Day18

executable aoc2023-19
    import:           defaults
    main-is:          Aplenty.hs
    build-depends:    containers, parsec, range
    hs-source-dirs:   2023/Day19

executable aoc2023-20
    import:           defaults
    main-is:          PulsePropagation.hs
    hs-source-dirs:   2023/Day20
    build-depends:    binary, bytestring, containers, parsec

executable aoc2023-21
    import:           defaults
    main-is:          StepCounter.hs
    hs-source-dirs:   2023/Day21
    build-depends:    bytestring, containers, gloss, linear

executable aoc2023-22
    import:           defaults
    main-is:          SandSlabs.hs
    hs-source-dirs:   2023/Day22
    build-depends:    containers, lens, linear

executable aoc2023-23
    import:           defaults
    main-is:          ALongWalk.hs
    hs-source-dirs:   2023/Day23
    build-depends:    containers, fgl, lens, memoize

executable aoc2023-24
    import:           defaults
    main-is:          NeverTellMeTheOdds.hs
    hs-source-dirs:   2023/Day24
    build-depends:    lens, linear, mfsolve, split

executable aoc2023-25
    import:           defaults
    main-is:          Snowverload.hs
    hs-source-dirs:   2023/Day25
    build-depends:    algos, array, fgl, random

executable aoc2022-21
    import:           defaults
    main-is:          MonkeyMath.hs
    hs-source-dirs:   2022/Day21
    build-depends:    fgl
