cabal-version:      2.4
name:               adventOfCode
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: My Advent of Code solutions in Haskell.

-- A longer description of the package.
description:
  These are my solutions for Advent of Code in Haskell.
  I don't aim to write any production code here, just to have some fun.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Erik de Jong
maintainer:         ecco256@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common defaults
  build-depends:    base >=4.17 && <5
  other-modules:    Paths_adventOfCode
  -- https://downloads.haskell.org/ghc/latest/docs/users_guide/debugging.html#suppressing-unwanted-information
  ghc-options:
        -Wall
        -Wcompat
        -threaded
        -j4
        +RTS -A32m -RTS
  default-language: GHC2021

common dump-core
    ghc-options:
        -ddump-simpl
        -ddump-to-file
        -dsuppress-idinfo
        -dsuppress-module-prefixes
        -dppr-case-as-let
        -dppr-cols=1000

common exec-defaults
  build-depends:    algos
  ghc-options:
        -rtsopts
        -with-rtsopts=-N
  default-extensions: LambdaCase

test-suite algos-test
    import:           defaults
    type:             exitcode-stdio-1.0
    -- Directories containing source files.
    hs-source-dirs:   Common/test
    main-is:          AlgorithmsTest.hs
    build-depends:
        algos,
        -- falsify,
        tasty,
        tasty-hunit
    
    build-depends:    base >=4.17 && <5

library algos
  import:           defaults
  exposed-modules:  Array, CycleDetect, Geometry, ShortestPath, Mincut
  build-depends:    lens, linear, array, fgl, random
  hs-source-dirs:   Common/src

-- executable aoc2015
--     main-is:          Main.hs
--     other-modules:
--           Paths_adventOfCode
--         , Day01.NotQuiteLisp
--         , Day02.IWasToldThereWouldBeNoMath
--         , Day03.PerfectlySphericalHousesinaVacuum
--         , Day04.TheIdealStockingStuffer
--         , Day05.DoesntHeHaveInternElvesForThis
--         -- !!aoc2015 module hook!! --
--     build-depends:
--           base >=4.17 && <5
--         , bytestring
--         , containers
--         -- , cryptohash-md5
--         , parsec
--         , pureMD5
--         , split
--     hs-source-dirs:   2015
--     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
--     default-language: Haskell2010

-- executable aoc2020
--     main-is:          Main.hs
--     other-modules:
--           Paths_adventOfCode
--         , Day01.ReportRepair
--         , Day02.PasswordPhilosophy
--         , Day03.TobogganTrajectory
--         , Day04.PassportProcessing
--         , Day05.BinaryBoarding
--         , Day06.CustomCustoms
--         , Day07.HandyHaversacks
--         -- !!aoc2020 module hook!! --
--     build-depends:
--           base >=4.17 && <5
--         , containers
--         , parsec
--         , split
--     hs-source-dirs:   2020
--     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
--     default-language: Haskell2010

executable aoc2021-01
    import:           defaults, exec-defaults
    main-is:          SonarSweep.hs
    hs-source-dirs:   2021/Day01

executable aoc2021-02
    import:           defaults, exec-defaults
    main-is:          Dive.hs
    hs-source-dirs:   2021/Day02

executable aoc2021-03
    import:           defaults, exec-defaults
    main-is:          BinaryDiagnostic.hs
    hs-source-dirs:   2021/Day03

executable aoc2021-04
    import:           defaults, exec-defaults
    main-is:          Bingo.hs
    hs-source-dirs:   2021/Day04
    build-depends:    containers, split

executable aoc2021-05
    import:           defaults, exec-defaults
    main-is:          HydrothermalVenture.hs
    hs-source-dirs:   2021/Day05
    build-depends:    containers, split

executable aoc2021-06
    import:           defaults, exec-defaults
    main-is:          Lanternfish.hs
    hs-source-dirs:   2021/Day06
    build-depends:    split

executable aoc2021-07
    import:           defaults, exec-defaults
    main-is:          TheTreacherOfWhales.hs
    hs-source-dirs:   2021/Day07
    build-depends:    split

executable aoc2021-08
    import:           defaults, exec-defaults
    main-is:          SevenSegmentSearch.hs
    hs-source-dirs:   2021/Day08
    build-depends:    containers, split

executable aoc2021-09
    import:           defaults, exec-defaults
    main-is:          SmokeBasin.hs
    hs-source-dirs:   2021/Day09

executable aoc2021-10
    import:           defaults, exec-defaults
    main-is:          SyntaxScoring.hs
    hs-source-dirs:   2021/Day10
    build-depends:    containers

executable aoc2021-11
    import:           defaults, exec-defaults
    main-is:          DumboOctopus.hs
    hs-source-dirs:   2021/Day11
    build-depends:    containers

executable aoc2021-12
    import:           defaults, exec-defaults
    main-is:          PassagePathing.hs
    hs-source-dirs:   2021/Day12
    build-depends:    containers, split

executable aoc2021-13
    import:           defaults, exec-defaults
    main-is:          TransparentOrigami.hs
    hs-source-dirs:   2021/Day13
    build-depends:    split

executable aoc2021-14
    import:           defaults, exec-defaults
    main-is:          ExtendedPolymerization.hs
    hs-source-dirs:   2021/Day14
    build-depends:    containers, split

executable aoc2021-15
    import:           defaults, exec-defaults
    main-is:          Chiton.hs
    hs-source-dirs:   2021/Day15
    build-depends:    fgl

executable aoc2021-16
    import:           defaults, exec-defaults
    main-is:          PacketDecoder.hs
    hs-source-dirs:   2021/Day16
    build-depends:    parsec

executable aoc2021-17
    import:           defaults, exec-defaults
    main-is:          TrickShot.hs
    hs-source-dirs:   2021/Day17
    build-depends:    parsec

executable aoc2021-18
    import:           defaults, exec-defaults
    main-is:          Snailfish.hs
    hs-source-dirs:   2021/Day18
    build-depends:    parsec

executable aoc2021-19
    import:           defaults, exec-defaults
    main-is:          BeaconScanner.hs
    hs-source-dirs:   2021/Day19
    build-depends:    hmatrix, parsec

-- executable aoc2021-20
--     import:           defaults, exec-defaults
--     main-is:          TrenchMap.hs
--     hs-source-dirs:   2021/Day20
--     build-depends:    repa

executable aoc2021-21
    import:           defaults, exec-defaults
    main-is:          DiracDice.hs
    hs-source-dirs:   2021/Day21

executable aoc2021-22
    import:           defaults, exec-defaults
    main-is:          ReactorReboot.hs
    hs-source-dirs:   2021/Day22
    build-depends:    parsec

executable aoc2021-23
    import:           defaults, exec-defaults
    main-is:          Amphipod.hs
    hs-source-dirs:   2021/Day23
    build-depends:    containers, hashable, psqueues

executable aoc2021-24
    import:           defaults, exec-defaults
    main-is:          ArithmeticLogicUnit.hs
    hs-source-dirs:   2021/Day24
    build-depends:    lens, linear

executable aoc2021-25
    import:           defaults, exec-defaults
    main-is:          SeaCucumber.hs
    hs-source-dirs:   2021/Day25
    build-depends:    linear

executable aoc2022-01
    import:           defaults, exec-defaults
    main-is:          CalorieCounting.hs
    hs-source-dirs:   2022/Day01
    build-depends:    split

executable aoc2022-02
    import:           defaults, exec-defaults
    main-is:          RockPaperScissors.hs
    hs-source-dirs:   2022/Day02

executable aoc2022-03
    import:           defaults, exec-defaults
    main-is:          RucksackReorganization.hs
    hs-source-dirs:   2022/Day03
    build-depends:    containers, split

executable aoc2022-04
    import:           defaults, exec-defaults
    main-is:          CampCleanup.hs
    hs-source-dirs:   2022/Day04
    build-depends:    split

executable aoc2022-05
    import:           defaults, exec-defaults
    main-is:          SupplyStacks.hs
    hs-source-dirs:   2022/Day05
    build-depends:    lens, split

executable aoc2022-06
    import:           defaults, exec-defaults
    main-is:          TuningTrouble.hs
    hs-source-dirs:   2022/Day06

executable aoc2022-07
    import:           defaults, exec-defaults
    main-is:          NoSpaceLeftOnDevice.hs
    hs-source-dirs:   2022/Day07
    build-depends:    mtl, split

executable aoc2022-08
    import:           defaults, exec-defaults
    main-is:          TreetopTreeHouse.hs
    hs-source-dirs:   2022/Day08

executable aoc2022-09
    import:           defaults, exec-defaults
    main-is:          RopeBridge.hs
    hs-source-dirs:   2022/Day09

executable aoc2022-10
    import:           defaults, exec-defaults
    main-is:          CathodeRayTube.hs
    hs-source-dirs:   2022/Day10
    build-depends:    split

executable aoc2022-11
    import:           defaults, exec-defaults
    main-is:          MonkeyintheMiddle.hs
    hs-source-dirs:   2022/Day11
    build-depends:    containers, split

executable aoc2022-12
    import:           defaults, exec-defaults
    main-is:          HillClimbingAlgorithm.hs
    hs-source-dirs:   2022/Day12
    build-depends:    containers

executable aoc2022-13
    import:           defaults, exec-defaults
    main-is:          DistressSignal.hs
    hs-source-dirs:   2022/Day13
    build-depends:    parsec, split

executable aoc2022-14
    import:           defaults, exec-defaults
    main-is:          RegolithReservoir.hs
    hs-source-dirs:   2022/Day14
    build-depends:    array, split

executable aoc2022-15
    import:           defaults, exec-defaults
    main-is:          BeaconExclusionZone.hs
    hs-source-dirs:   2022/Day15
    build-depends:    split

executable aoc2022-16
    import:           defaults, exec-defaults
    main-is:          ProboscideaVolcanium.hs
    hs-source-dirs:   2022/Day16
    build-depends:    containers, mtl, split

executable aoc2022-17
    import:           defaults, exec-defaults
    main-is:          PyroclasticFlow.hs
    hs-source-dirs:   2022/Day17
    build-depends:    containers, mtl

executable aoc2022-18
    import:           defaults, exec-defaults
    main-is:          BoilingBoulders.hs
    hs-source-dirs:   2022/Day18
    build-depends:    array, containers, mtl, split

executable aoc2022-19
    import:           defaults, exec-defaults
    main-is:          NotEnoughMinerals.hs
    hs-source-dirs:   2022/Day19
    build-depends:    lens, linear

executable aoc2022-20
    import:           defaults, exec-defaults
    main-is:          GrovePositioningSystem.hs
    hs-source-dirs:   2022/Day20
    build-depends:    containers

executable aoc2022-21
    import:           defaults, exec-defaults
    main-is:          MonkeyMath.hs
    hs-source-dirs:   2022/Day21
    build-depends:    fgl

executable aoc2022-22
    import:           defaults, exec-defaults
    main-is:          MonkeyMap.hs
    hs-source-dirs:   2022/Day22
    build-depends:    algos, lens, linear, split

executable aoc2022-23
    import:           defaults, exec-defaults
    main-is:          UnstableDiffusion.hs
    hs-source-dirs:   2022/Day23
    build-depends:    algos, linear

executable aoc2022-24
    import:           defaults, exec-defaults
    main-is:          BlizzardBasin.hs
    hs-source-dirs:   2022/Day24
    build-depends:    algos, linear

executable aoc2022-25
    import:           defaults, exec-defaults
    main-is:          FullofHotAir.hs
    hs-source-dirs:   2022/Day25

executable aoc2023-01
    import:           defaults, exec-defaults
    main-is:          Trebuchet.hs
    hs-source-dirs:   2023/Day01
    build-depends:    parsec

executable aoc2023-02
    import:           defaults, exec-defaults
    main-is:          CubeConundrum.hs
    hs-source-dirs:   2023/Day02
    build-depends:    parsec

executable aoc2023-03
    import:           defaults, exec-defaults
    main-is:          GearRatios.hs
    hs-source-dirs:   2023/Day03

executable aoc2023-04
    import:           defaults, exec-defaults
    main-is:          Scratchcards.hs
    hs-source-dirs:   2023/Day04
    build-depends:    text

executable aoc2023-05
    import:           defaults, exec-defaults
    main-is:          IfYouGiveASeedAFertilizer.hs
    hs-source-dirs:   2023/Day05
    build-depends:    parsec, range, split

executable aoc2023-06
    import:           defaults, exec-defaults
    main-is:          WaitForIt.hs
    hs-source-dirs:   2023/Day06

executable aoc2023-07
    import:           defaults, exec-defaults
    main-is:          CamelCards.hs
    hs-source-dirs:   2023/Day07
    build-depends:    containers

executable aoc2023-08
    import:           defaults, exec-defaults
    main-is:          HauntedWasteland.hs
    hs-source-dirs:   2023/Day08
    build-depends:    containers

executable aoc2023-09
    import:           defaults, exec-defaults
    main-is:          MirageMaintenance.hs
    hs-source-dirs:   2023/Day09

executable aoc2023-10
    import:           defaults, exec-defaults
    main-is:          PipeMaze.hs
    hs-source-dirs:   2023/Day10

executable aoc2023-11
    import:           defaults, exec-defaults
    main-is:          CosmicExpansion.hs
    hs-source-dirs:   2023/Day11

executable aoc2023-12
    import:           defaults, exec-defaults
    main-is:          HotSprings.hs
    hs-source-dirs:   2023/Day12
    build-depends:    MemoTrie, split

executable aoc2023-13
    import:           defaults, exec-defaults
    main-is:          PointofIncidence.hs
    hs-source-dirs:   2023/Day13
    build-depends:    split

executable aoc2023-14
    import:           defaults, exec-defaults
    main-is:          ParabolicReflectorDish.hs
    hs-source-dirs:   2023/Day14
    build-depends:    algos

executable aoc2023-15
    import:           defaults, exec-defaults
    main-is:          LensLibrary.hs
    hs-source-dirs:   2023/Day15
    build-depends:    containers, split

executable aoc2023-16
    import:           defaults, exec-defaults
    main-is:          TheFloorWillBeLava.hs
    hs-source-dirs:   2023/Day16
    build-depends:    containers, split

executable aoc2023-17
    import:           defaults, exec-defaults
    main-is:          ClumsyCrucible.hs
    hs-source-dirs:   2023/Day17
    build-depends:    containers, fgl

executable aoc2023-18
    import:           defaults, exec-defaults
    main-is:          LavaductLagoon.hs
    hs-source-dirs:   2023/Day18

executable aoc2023-19
    import:           defaults, exec-defaults
    main-is:          Aplenty.hs
    build-depends:    containers, parsec, range
    hs-source-dirs:   2023/Day19

executable aoc2023-20
    import:           defaults, exec-defaults
    main-is:          PulsePropagation.hs
    hs-source-dirs:   2023/Day20
    build-depends:    binary, bytestring, containers, parsec

executable aoc2023-21
    import:           defaults, exec-defaults
    main-is:          StepCounter.hs
    hs-source-dirs:   2023/Day21
    build-depends:    bytestring, containers, gloss, linear

executable aoc2023-22
    import:           defaults, exec-defaults
    main-is:          SandSlabs.hs
    hs-source-dirs:   2023/Day22
    build-depends:    containers, lens, linear

executable aoc2023-23
    import:           defaults, exec-defaults
    main-is:          ALongWalk.hs
    hs-source-dirs:   2023/Day23
    build-depends:    containers, fgl, lens, MemoTrie

executable aoc2023-24
    import:           defaults, exec-defaults
    main-is:          NeverTellMeTheOdds.hs
    hs-source-dirs:   2023/Day24
    build-depends:    lens, linear, mfsolve, split

executable aoc2023-25
    import:           defaults, exec-defaults
    main-is:          Snowverload.hs
    hs-source-dirs:   2023/Day25
    build-depends:    algos, array, fgl, random
